Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -264,6 +264,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   float: right;
   position: relative;
   background-color: transparent;
+  width: 85%;
 }
 
 .widget.extendednavigation a.pull {
@@ -271,7 +272,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
